# szakdolgozat

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  LICENSE  README.md  a.out  iAdvancedBuffer.h  iBuffer.h  iLoader.h  iManager.h  iPlayer.h  main.cpp  manager_test.cpp  queue_buffer.cpp  simple_loader.cpp  simple_manager.cpp  simple_player.cpp  sine_generator.h  tmp.h  utils.h
doc/: Doxyfile  Doxyfile_en  Doxyfile_hu  Doxyfile_hu_rtf  DoxygenLayout.xml  doc notes.txt
doc/coverage/: code_coverage.info  index-sort-f.html  index-sort-l.html  index.html
doc/coverage/inc/: Applicator.h.func-sort-c.html  Applicator.h.func.html  Applicator.h.gcov.html  AudioSource.h.func-sort-c.html  AudioSource.h.func.html  AudioSource.h.gcov.html  CheapSawtoothGenerator.h.func-sort-c.html  CheapSawtoothGenerator.h.func.html  CheapSawtoothGenerator.h.gcov.html  CheapSquareGenerator.h.func-sort-c.html  CheapSquareGenerator.h.func.html  CheapSquareGenerator.h.gcov.html  Clipping.h.func-sort-c.html  Clipping.h.func.html  Clipping.h.gcov.html  ComplexWaveformGenerator.h.func-sort-c.html  ComplexWaveformGenerator.h.func.html  ComplexWaveformGenerator.h.gcov.html  ConsolidationMethods.h.func-sort-c.html  ConsolidationMethods.h.func.html  ConsolidationMethods.h.gcov.html  Consolidator.h.func-sort-c.html  Consolidator.h.func.html  Consolidator.h.gcov.html  Filters.h.func-sort-c.html  Filters.h.func.html  Filters.h.gcov.html  Multiplexer.h.func-sort-c.html  Multiplexer.h.func.html  Multiplexer.h.gcov.html  PortAudioBackend.h.func-sort-c.html  PortAudioBackend.h.func.html  PortAudioBackend.h.gcov.html  QueueBuffer.h.func-sort-c.html  QueueBuffer.h.func.html  QueueBuffer.h.gcov.html  Recorder.h.func-sort-c.html  Recorder.h.func.html  Recorder.h.gcov.html  RepeatingBuffer.h.func-sort-c.html  (+47 more)
doc/coverage/src/: cheap_sawtooth_generator.cpp.func-sort-c.html  cheap_sawtooth_generator.cpp.func.html  cheap_sawtooth_generator.cpp.gcov.html  cheap_square_generator.cpp.func-sort-c.html  cheap_square_generator.cpp.func.html  cheap_square_generator.cpp.gcov.html  complex_waveform_generator.cpp.func-sort-c.html  complex_waveform_generator.cpp.func.html  complex_waveform_generator.cpp.gcov.html  consolidation_methods.cpp.func-sort-c.html  consolidation_methods.cpp.func.html  consolidation_methods.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  multiplexer.cpp.func-sort-c.html  multiplexer.cpp.func.html  multiplexer.cpp.gcov.html  ogg_file_loader.cpp.func-sort-c.html  ogg_file_loader.cpp.func.html  ogg_file_loader.cpp.gcov.html  portaudio_backend.cpp.func-sort-c.html  portaudio_backend.cpp.func.html  portaudio_backend.cpp.gcov.html  queue_buffer.cpp.func-sort-c.html  queue_buffer.cpp.func.html  queue_buffer.cpp.gcov.html  recorder.cpp.func-sort-c.html  recorder.cpp.func.html  recorder.cpp.gcov.html  repeating_buffer.cpp.func-sort-c.html  repeating_buffer.cpp.func.html  repeating_buffer.cpp.gcov.html  sawtooth_generator.cpp.func-sort-c.html  sawtooth_generator.cpp.func.html  sawtooth_generator.cpp.gcov.html  sine_generator.cpp.func-sort-c.html  sine_generator.cpp.func.html  sine_generator.cpp.gcov.html  (+12 more)
doc/html/: jquery.js
example/: 01 - sine wave.cpp  02 - reading from file.cpp  03 - applicator, filter, volume control and clipping.cpp  04 - multiplexing.cpp  05 - transitioning.cpp  06 - mixing with consolidator.cpp  06-mixing_with_consolidator.cpp  07 - complex waveform generation.cpp  08 - simple note.cpp  09 - recording and encoding.cpp  09-recording_and_encoding.cpp  10-recording_and_encoding_with_distortion.cpp  read_file.cpp
inc/: Applicator.h  AudioSource.h  CheapSawtoothGenerator.h  CheapSquareGenerator.h  Clipping.h  ComplexWaveformGenerator.h  ConsolidationMethods.h  Consolidator.h  Filters.h  Multiplexer.h  OggFileLoader.h  PortAudioBackend.h  PortAudioEndpoint.h  QueueBuffer.h  Recorder.h  RepeatingBuffer.h  SawtoothGenerator.h  SimpleLoader.h  SimpleManager.h  SimpleNote.h  SimplePlayer.h  SineGenerator.h  SquareGenerator.h  TransitionFunction.h  TransitionFunctions.h  Transitioner.h  TriangleGenerator.h  Utils.h  VolumeControl.h  VorbisDecoder.h  VorbisEncoder.h  iAdvancedBuffer.h  iAudioBackend.h  iAudioEndpoint.h  iBuffer.h  iConsolidationMethod.h  iGenerator.h  iLoader.h  iManager.h  iPlayer.h  (+4 more)
old/: iBuffer.h  queue_buffer.cpp
src/: CMakeLists.txt  cheap_sawtooth_generator.cpp  cheap_square_generator.cpp  complex_waveform_generator.cpp  consolidation_methods.cpp  dummyLoader.cpp  main.cpp  multiplexer.cpp  ogg_file_loader.cpp  portaudio_backend.cpp  portaudio_endpoint.cpp  queue_buffer.cpp  recorder.cpp  repeating_buffer.cpp  sawtooth_generator.cpp  simple_loader.cpp  simple_manager.cpp  simple_player.cpp  sine_generator.cpp  sine_generator.h  square_generator.cpp  triangle_generator.cpp  vorbis_decoder.cpp  vorbis_encoder.cpp
test/: CMakeLists.txt  applicator_test.cpp  cheap_sawtooth_generator_test.cpp  cheap_square_generator_test.cpp  clipping_test.cpp  combined_vorbis_test.cpp  complex_waveform_generator_test.cpp  consolidation_methods_test.cpp  consolidator_test.cpp  echo_test.cpp  filters_test.cpp  fuzzbox_test.cpp  manager_test.cpp  multiplexer_test.cpp  portaudio_backend_test.cpp  queue_buffer_test.cpp  recorder_test.cpp  repeating_buffer_test.cpp  sawtooth_generator_test.cpp  sine_generator_test.cpp  square_generator_test.cpp  test_main.cpp  transition_functions_test.cpp  transitioner_test.cpp  triangle_generator_test.cpp  volume_control_test.cpp  vorbis_classes_test.cpp  vorbis_encoder_test.cpp
(+1193 files in other folders)
